# mercury

./: .INSTALL.in  .README.in  .cvsignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .hal_trunk_sync_tag  .mercury-compiler.spec.in  .mode-constraints-sync-tag  .nocopyright  BUGS  COPYING.LIB  Dockerfile  HISTORY  INSTALL  INSTALL.git  INSTALL_CVS  LICENSE  LIMITATIONS  LIMITATIONS.md  MAINTENANCE  Makefile  Makefile.DLLs  Mmake  Mmake.common  Mmake.common.in  Mmake.workspace  Mmakefile  NEWS  NEWS.md  README  README.64-bit  README.AIX  README.AIX.md  README.BSDI  README.CSharp  README.CSharp.md  README.Cygwin  README.Docker  (+55 more)
Documentation/: NEWS_1995_07_18_release_0_3  NEWS_1995_09_14_release_0_4  NEWS_1996_02_15_release_0_5  NEWS_1996_08_02_release_0_6  NEWS_1997_08_15_release_0_7  NEWS_1998_11_18_release_0_8  NEWS_1999_12_18_release_0_9  NEWS_2001_02_25_release_0_10  NEWS_2002_12_24_release_0_11  NEWS_2005_09_09_release_0_12  NEWS_2006_09_14_release_0_13  NEWS_2010_07_09_release_10_04  NEWS_2011_04_27_release_11_01  NEWS_2011_12_22_release_11_07  NEWS_2013_05_16_release_13_05  NEWS_2014_02_10_release_14_01  NEWS_2020_01_28_release_20_01.md  NEWS_2020_06_30_release_20_06  NEWS_2022_03_31_release_22_01.md  README.AIX.md  README.CSharp.md  README.Cygwin.md  README.Docker  README.Docker.md  README.FreeBSD.md  README.Java.md  README.Linux  README.Linux-PPC  README.Linux-PPC.md  README.Linux-aarch64.md  README.Linux-m68k.md  README.Linux.md  README.MS-VisualC.md  README.MS-Windows.md  README.MSYS2.md  README.MinGW  README.OpenBSD.md  README.ThreadScope  README.bootstrap  README.clang.md  (+5 more)
analysis/: .cvsignore  .mgnuc_copts  .nocopyright  ANALYSIS_FLAGS.in  Mercury.options  Mmakefile  README  analysis.file.m  analysis.m  mer_analysis.m
bindist/: .cvsignore  .gitignore  INSTALL  Makefile.in  Mmake  Mmakefile  README  README.MS-Windows  bindist.INSTALL  bindist.INSTALL.in  bindist.Makefile.in  bindist.README  bindist.README.Linux  bindist.README.MS-Windows  bindist.build_vars.in  bindist.configure.in  bindist.in  configure.in
boehm_gc/: .cvsignore  .gitignore  .nocopyright  EMX_MAKEFILE  Makefile  Makefile.am  Makefile.direct  Makefile.in  Mmake  Mmakefile  NT_MAKEFILE  NT_THREADS_MAKEFILE  README  README.QUICK  README.linux  allchblk.c  alloc.c  alpha_mach_dep.S  alpha_mach_dep.s  bdw-gc.pc  blacklst.c  build_atomic_ops.sh  build_atomic_ops.sh.cygwin  config.guess  config.h  config.sub  configure  configure.ac  configure.in  dbg_mlc.c  dyn_load.c  finalize.c  gc.h  gc.mak  gc_cpp.cc  gc_priv.h  gcconfig.h  gcj_mlc.c  if_mach.c  if_not_there.c  (+25 more)
boehm_gc/libatomic_ops/src/: .cvsignore  .nocopyright  Makefile.am  Makefile.in  atomic_ops.c  atomic_ops.h  atomic_ops_stack.c  config.h.in
boehm_gc/libatomic_ops/src/atomic_ops/: .nocopyright  Makefile.in  generalize-small.h  generalize-small.template  generalize.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/: .nocopyright  Makefile.am  Makefile.in  aligned_atomic_load_store.h  atomic_load_store.h  char_atomic_load_store.h  emul_cas.h  generic_pthread.h  int_aligned_atomic_load_store.h  int_atomic_load_store.h  ordered.h  ordered_except_wr.h  read_ordered.h  short_aligned_atomic_load_store.h  short_atomic_load_store.h  standard_ao_double_t.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/armcc/: .nocopyright  arm_v6.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/gcc/: .nocopyright  alpha.h  arm.h  hppa.h  ia64.h  m68k.h  mips.h  powerpc.h  s390.h  sparc.h  x86.h  x86_64.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/hpc/: .nocopyright  hppa.h  ia64.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/ibmc/: .nocopyright  powerpc.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/icc/: .nocopyright
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/msftc/: .nocopyright  common32_defs.h  x86.h  x86_64.h
boehm_gc/libatomic_ops/src/atomic_ops/sysdeps/sunc/: .nocopyright  x86.h  x86_64.h
browser/: .cvsignore  .gitignore  .mgnuc_copts  .mgnuc_opts  .nocopyright  MDB_FLAGS.in  Mercury.options  Mmakefile  RESERVED_MACRO_NAMES  browse.m  browse_test.m  browser_info.m  browser_library.m  browser_term.m  collect_lib.m  cterm.m  debugger_interface.m  declarative_analyser.m  declarative_debugger.m  declarative_edt.m  declarative_execution.m  declarative_oracle.m  declarative_test.m  declarative_tree.m  declarative_user.m  dice.m  diff.m  dl.m  frame.m  help.m  interactive_query.m  io_action.m  listing.m  mdb.m  mdbcomp.m  mer_browser.m  mer_mdbcomp.m  name_mangle.m  parse.m  percent_encoding.m  (+12 more)
bytecode/: .cvsignore  Bytecode-doc  Makefile  Mmakefile  README  TODO  bytecode.h  dict.c  dict.h  disasm.c  disasm.h  machine.c  machine.h  mb_basetypes.h  mb_bytecode.c  mb_bytecode.h  mb_disasm.c  mb_disasm.h  mb_exec.c  mb_exec.h  mb_interface.c  mb_interface.h  mb_interface_stub.c  mb_machine.c  mb_machine.h  mb_machine_def.h  mb_machine_show.c  mb_machine_show.h  mb_mem.c  mb_mem.h  mb_module.c  mb_module.h  mb_stack.c  mb_stack.h  mb_util.c  mb_util.h  mbi.c  mbi.h  mbi_main.c  mdb.m  (+14 more)
compiler/: .alias_trunk_sync_tag  .cvsignore  .gitignore  .hal_alias_sync_tag  .mgnuc_copts  .nocopyright  Mmake  (+873 more)
runtime/: .cvsignore  .gdbinit  .gdbinit.no_reg_vars  .gdbinit.sparc  .gitignore  .mgnuc_copts  .nocopyright  Arrangeregs  Bestregs  CFLAGSFILE  Makefile.conf.in  Mmake  Mmakefile  PORTABILITY  RESERVED_MACRO_NAMES  access.c  access.h  autoconf.h.in  aux.c  aux.h  call.mod  calls.h  conf.h  conf.h.in  configure.in  context.h  context.mod  debug.h  deep_copy.c  deep_copy.h  dlist.c  dlist.h  dummy.c  dummy.h  engine.h  engine.mod  ext_signal.h  ext_stdio.h  ext_stdlib.h  getopt.h  (+262 more)
runtime/GETOPT/: getopt1.c
runtime/machdeps/: .nocopyright  ALPHA_REGS  ARM_REGS  I386_REGS  MIPS_REGS  README  RS6000_REGS  SPARC_REGS  aarch64_regs.h  alpha_regs.h  alpha_regtest  arm_regs.h  arm_regtest  doregtest  generic_regtest  i386_regs.h  ia64_regs.h  m68k.h  mips_regs.h  mips_regtest  no_regs.h  pa_regs.h  regtest.c  regtest2.c  rs6000_regs.h  sparc_regs.h  sparc_regtest  x86_64_regs.h
runtime/notes/: par_engine_state.dot  par_engine_state.txt
(+8860 files in other folders)
